--- a/playbook.yml
+++ b/playbook.yml
@@ -1,4 +1,13 @@
 - hosts: webservers
+  roles:
+    - datadog.datadog
+  vars:
+    datadog_checks:
+      http_check:
+        init_config:
+        instances:
+          - name: Site
+            url: "{{ site_base_url }}"
   tasks:
     - name: stop container
       community.docker.docker_container:
