--- a/group_vars/webservers/vars.yml
+++ b/group_vars/webservers/vars.yml
@@ -1,8 +1,10 @@
-redmine_db_host: "{{ vault_redmine_db_host }}"
-redmine_db_username: "{{ vault_redmine_db_username }}"
 redmine_db_password: "{{ vault_redmine_db_password }}"
-redmibe_db_database: "{{ vault_redmibe_db_database }}"
-redmibe_db_port: "{{ vault_redmibe_db_port }}"
 datadog_api_key: "{{ vault_datadog_api_key }}"
-datadog_site: "{{ vault_datadog_site }}"
+datadog_site: datadoghq.eu
 site_base_url: https://sdorodniy.site/
+datadog_checks:
+  http_check:
+    init_config:
+    instances:
+      - name: Site
+        url: "{{ site_base_url }}"
